Show/hide touch menu through display rather than visiblity, fix sending of non-integer screen sizes for small screens.

--- a/guacamole/src/main/webapp/styles/client.css
+++ b/guacamole/src/main/webapp/styles/client.css
@@ -262,7 +262,7 @@ textarea#eventTarget {
 div#touchMenu {
 
     position: absolute;
-    visibility: hidden;
+    display: none;
     z-index: 4;
     
     white-space: pre;
